Simplify schema for holochain scaffold types

--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
+    "graphql-scalars": "^1.17.0",
     "husky": "7.0.2",
+    "i": "^0.3.7",
     "jest": "^28.1.1",
     "lint-staged": "11.1.2",
+    "npm": "^8.12.1",
     "postcss": "8.3.6",
     "postcss-nested": "5.0.6",
     "prettier": "2.4.0",
