--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "paths": {
       "@components/*": ["./src/components/*",],
       "@contexts/*": ["./src/app/contexts/*",],
-      "@definitions/*": ["./src/definitions/*",],
+      "@definitions/*": ["src/app/definitions/*",],
       "@graphql/*": ["./src/graphql/*",],
       "@pages/*": ["./src/components/organisms/pages/*",],
       "@styled/*": ["./src/styled/*"]
