--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "prepare": "husky install",
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "npm run watch:css & vite",
+    "build": "npm run build:css tsc && vite build",
+    "build:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
@@ -64,9 +66,10 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "autoprefixer": "10.3.4",
+    "autoprefixer": "^10.3.4",
     "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
@@ -77,12 +80,14 @@
     "lint-staged": "11.1.2",
     "npm": "^8.12.1",
     "postcss": "8.3.6",
+    "postcss-cli": "^9.1.0",
     "postcss-nested": "5.0.6",
     "prettier": "2.4.0",
     "react-is": ">= 16.8.0",
     "storybook": "^6.5.8",
     "styled-components": "^5.3.3",
-    "tailwindcss": "2.2.15",
+    "tailwindcss": "^2.2.15",
+    "twin.macro": "^2.8.2",
     "typescript": "4.4.3",
     "vite": "2.5.6",
     "vite-plugin-checker": "0.3.4",
