--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run watch:css & vite",
     "build": "npm run build:css tsc && vite build",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
+    "watch:css": "TAILWIND_MODE=watch npx tailwindcss -c ./tailwind.config.js --postcss -i src/assets/tailwind.css -o src/assets/styles.css --watch",
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
@@ -71,6 +71,7 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
     "graphql-scalars": "^1.17.0",
