install necessary deps and scss for dark/light

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "@zougt/some-loader-utils": "^1.4.3",
+    "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
     "autoprefixer": "^10.3.4",
     "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
@@ -76,22 +78,25 @@
     "eslint-plugin-storybook": "^0.5.12",
     "graphql-scalars": "^1.17.0",
     "husky": "7.0.2",
-    "i": "^0.3.7",
     "jest": "^28.1.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "11.1.2",
-    "npm": "^8.12.1",
     "postcss": "8.3.6",
     "postcss-cli": "^9.1.0",
     "postcss-nested": "5.0.6",
+    "postcss-scss": "^4.0.4",
     "prettier": "2.4.0",
     "react-is": ">= 16.8.0",
+    "sass": "^1.52.3",
     "storybook": "^6.5.8",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.15",
-    "twin.macro": "^2.8.2",
     "typescript": "4.4.3",
     "vite": "2.5.6",
     "vite-plugin-checker": "0.3.4",
+    "vite-plugin-imp": "^2.2.0",
+    "vite-plugin-import2": "^1.0.7",
     "vite-tsconfig-paths": "3.3.14"
   }
 }
