--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "npm run watch:css & vite",
+    "c-dev": "concurrently \"npm run dev\" \"npm run storybook -- --no-manager-cache --quiet\" \"npm run gen\"",
     "build": "npm run build:css tsc && vite build",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
     "watch:css": "TAILWIND_MODE=watch npx tailwindcss -c ./tailwind.config.js --postcss -i src/assets/tailwind.css -o src/assets/styles.css --watch",
@@ -11,7 +12,7 @@
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
     "test": "jest",
-    "gen": "graphql-codegen --config codegen.yml",
+    "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -59,6 +60,8 @@
     "@storybook/addon-interactions": "^6.5.8",
     "@storybook/addon-links": "^6.5.8",
     "@storybook/builder-vite": "^0.1.36",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.8",
     "@storybook/testing-library": "^0.0.11",
     "@types/jest": "^28.1.1",
@@ -74,14 +77,19 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "concurrently": "^7.2.2",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
+    "graphql-codegen-typescript-mock-data": "^2.2.3",
     "graphql-scalars": "^1.17.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "7.0.2",
+    "install": "^0.13.0",
     "jest": "^28.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "11.1.2",
+    "npm": "^8.12.1",
     "postcss": "8.3.6",
     "postcss-cli": "^9.1.0",
     "postcss-nested": "5.0.6",
@@ -90,10 +98,11 @@
     "react-is": ">= 16.8.0",
     "sass": "^1.52.3",
     "storybook": "^6.5.8",
+    "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.15",
     "typescript": "4.4.3",
-    "vite": "2.5.6",
+    "vite": "^2.9.12",
     "vite-plugin-checker": "0.3.4",
     "vite-plugin-imp": "^2.2.0",
     "vite-plugin-import2": "^1.0.7",
