--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
+      "@app/*": ["./src/app/*",],
       "@components/*": ["./src/components/*",],
       "@contexts/*": ["./src/app/contexts/*",],
       "@definitions/*": ["src/app/definitions/*",],
