--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.17.12",
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "^2.1.1",
     "@graphql-codegen/typescript": "2.4.5",
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
@@ -64,6 +65,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.8",
     "@storybook/testing-library": "^0.0.11",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^28.1.1",
     "@types/react": "17.0.20",
     "@types/react-dom": "^17.0.13",
@@ -71,6 +73,7 @@
     "@vitejs/plugin-react-refresh": "1.3.6",
     "@zougt/some-loader-utils": "^1.4.3",
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
+    "apollo": "^2.34.0",
     "autoprefixer": "^10.3.4",
     "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
