--- a/.github/graphql-inspector.yaml
+++ b/.github/graphql-inspector.yaml
@@ -1,2 +1,2 @@
 branch: 'test'
-schema: '/src/graphql/schema.graphql' # an output of `$ graphql-inspector introspect ...
+schema: '../schema.graphql' # an output of `$ graphql-inspector introspect ...
