--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "@storybook/addon-essentials": "^6.5.8",
     "@storybook/addon-interactions": "^6.5.8",
     "@storybook/addon-links": "^6.5.8",
-    "@storybook/builder-vite": "^0.1.36",
-    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.8",
     "@storybook/testing-library": "^0.0.11",
@@ -73,25 +72,25 @@
     "@vitejs/plugin-react-refresh": "1.3.6",
     "@zougt/some-loader-utils": "^1.4.3",
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
-    "apollo": "^2.34.0",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "concurrently": "^7.2.2",
+    "css-loader": "^5.2.7",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
     "graphql-codegen-typescript-mock-data": "^2.2.3",
     "graphql-scalars": "^1.17.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^4",
     "husky": "7.0.2",
-    "install": "^0.13.0",
     "jest": "^28.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "11.1.2",
+    "node-sass": "^7.0.1",
     "npm": "^8.12.1",
     "postcss": "8.3.6",
     "postcss-cli": "^9.1.0",
@@ -100,15 +99,17 @@
     "prettier": "2.4.0",
     "react-is": ">= 16.8.0",
     "sass": "^1.52.3",
+    "sass-loader": "^10.0.0",
     "storybook": "^6.5.8",
     "storybook-addon-styled-component-theme": "^2.0.0",
+    "style-loader": "^2.0.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.15",
+    "ts-loader": "8.2.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.4.3",
     "vite": "^2.9.12",
     "vite-plugin-checker": "0.3.4",
-    "vite-plugin-imp": "^2.2.0",
-    "vite-plugin-import2": "^1.0.7",
     "vite-tsconfig-paths": "3.3.14"
   }
 }
