copy vf-graphql logic

--- a/package.json
+++ b/package.json
@@ -31,12 +31,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@graphql-tools/schema": "^8.3.14",
+    "@graphql-tools/utils": "^8.6.13",
     "@holochain/client": "^0.3.2",
     "@reduxjs/toolkit": "^1.8.0",
+    "@valueflows/vf-graphql-holochain": "0.0.1-alpha.4",
+    "@vf-ui/graphql-client-holochain": "0.0.1-alpha.4",
     "antd": "^4.21.0",
+    "deep-for-each": "^3.0.0",
+    "fecha": "^4.2.3",
     "formik": "^2.2.9",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.12.6",
+    "is-object": "^1.0.2",
+    "js-base64": "^3.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
