--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@apollo/client": "^3.5.10",
     "@holochain/client": "^0.3.2",
     "@reduxjs/toolkit": "^1.8.0",
@@ -37,8 +38,8 @@
     "formik": "^2.2.9",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.12.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "16.9",
+    "react-dom": "16.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "redis": "^4.0.4",
@@ -56,20 +57,19 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@innei-util/eslint-config-react-ts": "^0.1.2",
     "@innei-util/prettier": "^0.1.3",
-    "@storybook/addon-actions": "^6.5.8",
-    "@storybook/addon-essentials": "^6.5.8",
-    "@storybook/addon-interactions": "^6.5.8",
-    "@storybook/addon-links": "^6.5.8",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-interactions": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.8",
-    "@storybook/testing-library": "^0.0.11",
-    "@types/graphql": "^14.5.0",
+    "@storybook/react": "6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@types/jest": "^28.1.1",
     "@types/react": "17.0.20",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react-refresh": "1.3.6",
+    "@vitejs/plugin-react": "^1.3.2",
     "@zougt/some-loader-utils": "^1.4.3",
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
     "autoprefixer": "^10.4.7",
@@ -91,7 +91,6 @@
     "less-loader": "^11.0.0",
     "lint-staged": "11.1.2",
     "node-sass": "^7.0.1",
-    "npm": "^8.12.1",
     "postcss": "8.3.6",
     "postcss-cli": "^9.1.0",
     "postcss-nested": "5.0.6",
@@ -100,12 +99,12 @@
     "react-is": ">= 16.8.0",
     "sass": "^1.52.3",
     "sass-loader": "^10.0.0",
-    "storybook": "^6.5.8",
+    "storybook": "6.5.9",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.15",
-    "ts-loader": "8.2.0",
+    "ts-loader": "^6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.4.3",
     "vite": "^2.9.12",
