separate out theme switcher

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -10,6 +10,11 @@
     ],
     "@babel/preset-typescript"
   ],
+  "env": {
+      "test": {
+        "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      }
+  },
   "plugins": [
     [
       "babel-plugin-styled-components",
