--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
-    "test": "jest",
+    "test": "jest --clearCache",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -38,8 +38,8 @@
     "formik": "^2.2.9",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.12.6",
-    "react": "16.9",
-    "react-dom": "16.9",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "redis": "^4.0.4",
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.17.12",
@@ -57,17 +58,19 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@innei-util/eslint-config-react-ts": "^0.1.2",
     "@innei-util/prettier": "^0.1.3",
+    "@jest/types": "^28.1.1",
     "@storybook/addon-actions": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
     "@storybook/addon-interactions": "6.5.9",
     "@storybook/addon-links": "6.5.9",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addons": "^6.5.9",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/jest": "^28.1.1",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.3.2",
     "@zougt/some-loader-utils": "^1.4.3",
@@ -97,6 +100,7 @@
     "postcss-scss": "^4.0.4",
     "prettier": "2.4.0",
     "react-is": ">= 16.8.0",
+    "require-from-string": "^2.0.2",
     "sass": "^1.52.3",
     "sass-loader": "^10.0.0",
     "storybook": "6.5.9",
