--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@innei-util/eslint-config-react-ts": "^0.1.2",
-    "@innei-util/prettier": "^0.1.4",
+    "@innei-util/prettier": "0.8.2",
     "@jest/types": "^28.1.1",
     "@storybook/addon-actions": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
@@ -67,8 +67,8 @@
     "@storybook/addons": "^6.5.9",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/jest": "28.1.1",
+    "@storybook/testing-library": "0.0.13",
+    "@types/jest": "28.1.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
