add todo components and test tooling

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
-    "test": "jest --clearCache",
+    "test": "jest --clearCache --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -56,6 +56,8 @@
     "@graphql-codegen/typescript": "2.4.5",
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
+    "@holo-host/mock-conductor": "^0.3.3",
+    "@holochain-open-dev/core-types": "^0.2.1",
     "@innei-util/eslint-config-react-ts": "^0.1.2",
     "@innei-util/prettier": "0.8.2",
     "@jest/types": "^28.1.1",
@@ -68,10 +70,14 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/jest": "28.1.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.2",
     "@zougt/some-loader-utils": "^1.4.3",
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
