--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.ts*\" ",
     "lint": "eslint ./src --fix",
-    "test": "jest --clearCache --config=./jest.config.ts",
+    "test": "jest --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -96,6 +96,7 @@
     "html-webpack-plugin": "^4",
     "husky": "7.0.4",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.2",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "11.1.2",
@@ -114,6 +115,7 @@
     "style-loader": "^2.0.0",
     "styled-components": "5.3.5",
     "tailwindcss": "2.2.19",
+    "ts-jest": "^28.0.5",
     "ts-loader": "^6",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.4.3",
