fix deps for gql schema  loading

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -23,6 +23,7 @@
         "ssr": false
       }
     ],
+    "import-graphql",
     "@babel/plugin-transform-shorthand-properties",
     "@babel/plugin-transform-block-scoping",
     [
