--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
     }
   },
   "types": ["node", "jest", "@testing-library/jest-dom"],
-    
+  "typeRoots": ["node_modules/@types", "src/@types"],
+  "files": ["src/@types/graphql.d.ts"],
   "include": ["src/**/*.tsx", "src/**/*.ts"],
 }
