--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: './schema.graphql'
+schema: './src/graphql/schema/schema.graphql'
 documents: 'src/graphql/**/*.graphql'
 generates:
   src/graphql/generated/index.tsx:
