--- a/.huskyrc
+++ b/.huskyrc
@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# Place this in ~/ if using NVM
 
 export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
