--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "prepare": "husky install",
-    "dev": "npm run watch:css & vite",
+    "dev": "concurrently \"npm run watch:css\" \"vite\"",
     "c-dev": "concurrently \"npm run dev\" \"npm run storybook -- --no-manager-cache --quiet\" \"npm run gen\"",
     "build": "npm run build:css tsc && vite build",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
