--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "redis": "^4.1.0",
-    "ws": "*"
+    "ws": "*",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
