--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,13 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/atoms/*": ["./src/components/atoms/*"],
       "@/app/*": ["./src/app/*",],
-      "@/components/*": ["./src/components/*",],
+      "@/atoms/*": ["./src/components/atoms/*"],
       "@/contexts/*": ["./src/app/contexts/*",],
       "@/graphql/*": ["./src/graphql/*",],
+      "@/molecules/*": ["./src/components/molecules/*",],
+      "@/organisms/*": ["./src/components/organisms/*",],
+      "@/templates/*": ["./src/components/templates/*",],
       "@/pages/*": ["./src/components/organisms/pages/*",]
     }
   },
