--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-push": "if git-branch-is test; then lint-staged"
     }
   },
   "lint-staged": {
@@ -97,6 +97,7 @@
     "esbuild": "^0.14.48",
     "eslint": "7.32.0",
     "eslint-plugin-storybook": "^0.5.12",
+    "git-branch-is": "^4.0.0",
     "graphql-codegen-typescript-mock-data": "^2.2.3",
     "graphql-scalars": "^1.17.0",
     "html-webpack-plugin": "^4",
