--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "if git-branch-is test; then lint-staged"
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
