--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write --ignore-path ./.prettierignore \"src/**/*.ts*\" \"src/**/*.tsx*\" \"src/**/*.graphql\" ",
     "lint": "eslint ./src --fix",
     "test": "jest --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
+    "test-prepush": "jest -no-cache --verbose --runInBand --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -24,11 +25,6 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,scss,less}": [
       "npm run format"
-    ]
-  },
-  "test-all": {
-    "*": [
-      "jest -no-cache --verbose --runInBand --config=./jest.config.ts"
     ]
   },
   "dependencies": {
