--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "format": "prettier --write --ignore-path ./.prettierignore \"src/**/*.ts*\" \"src/**/*.tsx*\" \"src/**/*.graphql\" ",
     "lint": "eslint ./src --fix",
     "test": "jest --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
-    "test-prepush": "jest -no-cache --verbose --runInBand --config=./jest.config.ts",
+    "prepush": "jest -no-cache --verbose --runInBand --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged",
       "pre-push": "npm run test"
     }
   },
