--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
