--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "format": "prettier --write --ignore-path ./.prettierignore \"src/**/*.ts*\" \"src/**/*.tsx*\" \"src/**/*.graphql\" ",
     "lint": "eslint ./src --fix",
-    "test": "jest --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
     "prepush": "jest -no-cache --verbose --runInBand --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
@@ -127,6 +127,7 @@
     "tailwindcss": "2.2.19",
     "ts-jest": "^28.0.5",
     "ts-loader": "^6",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.4.3",
     "typescript-plugin-styled-components": "^2.0.0",
