--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "@/molecules/*": ["./src/components/molecules/*",],
       "@/organisms/*": ["./src/components/organisms/*",],
       "@/templates/*": ["./src/components/templates/*",],
-      "@/pages/*": ["./src/components/organisms/pages/*",]
+      "@/pages/*": ["./src/pages/*",]
     }
   },
   "allowJs": true,
