--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "git-branch-is": "^4.0.0",
     "graphql-codegen-typescript-mock-data": "^2.2.3",
     "graphql-scalars": "^1.17.0",
+    "history": "^5.3.0",
     "html-webpack-plugin": "^4",
     "husky": "7.0.4",
     "jest": "^28.1.1",
