--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "buffer": "^6.0.3",
     "deep-for-each": "^3.0.0",
     "fecha": "^4.2.3",
+    "flowbite": "^1.5.2",
     "formik": "2.2.9",
     "graphql": "15.8.0",
     "graphql-tag": "^2.12.6",
