--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "buffer": "^6.0.3",
     "deep-for-each": "^3.0.0",
     "fecha": "^4.2.3",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.8",
     "formik": "2.2.9",
     "graphql": "15.8.0",
     "graphql-tag": "^2.12.6",
@@ -95,6 +97,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-react-app": "^10.0.1",
     "concurrently": "^7.2.2",
     "css-loader": "^5.2.7",
     "esbuild": "^0.14.48",
