add template component

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "concurrently \"npm run watch:css\" \"vite\"",
-    "c-dev": "concurrently \"npm run dev\" \"npm run storybook -- --no-manager-cache --quiet\" \"npm run gen\"",
+    "c-dev": "concurrently \"npm run dev\" \"npm run gen\"",
     "build": "npm run build:css tsc && vite build",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/styles.css",
     "watch:css": "TAILWIND_MODE=watch npx tailwindcss -c ./tailwind.config.js --postcss -i src/assets/tailwind.css -o src/assets/styles.css --watch",
@@ -75,7 +75,7 @@
     "@storybook/addon-links": "6.5.9",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.5.9",
-    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/preset-scsrcss": "^1.0.3",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
     "@testing-library/dom": "^8.16.0",
@@ -127,6 +127,7 @@
     "storybook-addon-styled-component-theme": "^2.0.0",
     "style-loader": "^2.0.0",
     "styled-components": "5.3.5",
+    "svg-url-loader": "^7.1.1",
     "tailwindcss": "2.2.19",
     "ts-jest": "^28.0.5",
     "ts-loader": "^6",
