--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       "@/molecules/*": ["./src/components/molecules/*",],
       "@/organisms/*": ["./src/components/organisms/*",],
       "@/templates/*": ["./src/components/templates/*",],
-      "@/pages/*": ["./src/pages/*",]
+      "@/pages/*": ["./src/pages/*",],
+      "@/svg/*": ["./src/assets/svg/*",]
     }
   },
   "allowJs": true,
