--- a/.babelrc.json
+++ b/.babelrc.json
@@ -12,11 +12,18 @@
     "@babel/preset-typescript"
   ],
   "env": {
-      "test": {
-        "plugins": ["@babel/plugin-transform-modules-commonjs"]
-      }
+    "test": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+    }
   },
   "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": "css"
+      }
+    ],
     [
       "babel-plugin-styled-components",
       {
