--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "format": "prettier --write --ignore-path ./.prettierignore \"src/**/*.ts*\" \"src/**/*.tsx*\" \"src/**/*.graphql\" ",
     "lint": "eslint ./src --fix",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
+    "test": "DEBUG_PRINT_LIMIT=100 node --experimental-vm-modules node_modules/jest/bin/jest.js --watch -no-cache --verbose --runInBand --config=./jest.config.ts",
     "prepush": "jest -no-cache --verbose --runInBand --config=./jest.config.ts",
     "gen": "graphql-codegen --config codegen.yml --watch",
     "storybook": "start-storybook -p 6006",
@@ -29,11 +29,11 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@apollo/client": "3.6.6",
     "@graphql-tools/schema": "^8.3.14",
     "@holochain/client": "0.4.1",
     "@reduxjs/toolkit": "1.8.2",
+    "antd": "^4.22.8",
     "buffer": "^6.0.3",
     "deep-for-each": "^3.0.0",
     "fecha": "^4.2.3",
@@ -49,6 +49,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "redis": "^4.1.0",
+    "upload": "link:antd/lib/upload",
     "ws": "*",
     "yup": "^0.32.11"
   },
@@ -74,9 +75,10 @@
     "@storybook/addon-links": "6.5.9",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.5.9",
-    "@storybook/preset-scsrcss": "^1.0.3",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -92,6 +94,7 @@
     "autoprefixer": "10.4.7",
     "babel-jest": "28.1.1",
     "babel-loader": "8.2.5",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-import-graphql": "^2.8.1",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "4.1.0",
@@ -108,6 +111,7 @@
     "history": "^5.3.0",
     "html-webpack-plugin": "^4",
     "husky": "7.0.4",
+    "interface": "link:antd/es/upload/interface",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.2",
     "less": "^4.1.3",
@@ -121,6 +125,7 @@
     "prettier": "2.4.0",
     "react-is": "18.1.0",
     "require-from-string": "^2.0.2",
+    "rollup-plugin-visualizer": "^5.8.0",
     "sass": "^1.52.3",
     "sass-loader": "^10.0.0",
     "storybook": "6.5.9",
