--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "redis": "^4.1.0",
-    "upload": "link:antd/lib/upload",
     "ws": "*",
     "yup": "^0.32.11"
   },
@@ -91,10 +90,9 @@
     "@vitejs/plugin-react": "^1.3.2",
     "@zougt/some-loader-utils": "^1.4.3",
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.5",
-    "autoprefixer": "10.4.7",
+    "autoprefixer": "10.4.5",
     "babel-jest": "28.1.1",
     "babel-loader": "8.2.5",
-    "babel-plugin-import": "^1.13.5",
     "babel-plugin-import-graphql": "^2.8.1",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "4.1.0",
@@ -141,6 +139,7 @@
     "typescript": "4.4.3",
     "typescript-plugin-styled-components": "^2.0.0",
     "vite": "^2.9.12",
+    "vite-plugin-babel-import": "^2.0.5",
     "vite-plugin-checker": "0.3.4",
     "vite-plugin-simple-gql": "^0.5.0",
     "vite-tsconfig-paths": "3.3.14"
