--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@apollo/client": "3.6.6",
     "@graphql-tools/schema": "^8.3.14",
-    "@holochain/client": "0.4.1",
+    "@holochain-open-dev/utils": "^0.3.3",
+    "@holochain/client": "0.8.0",
+    "@msgpack/msgpack": "^2.8.0",
     "@reduxjs/toolkit": "1.8.2",
     "antd": "^4.22.8",
     "buffer": "^6.0.3",
